fix landing overflow

--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -14,7 +14,7 @@
 }
 
 .landing-page {
-  height: 44em;
+  height: 31em;
   display: flex;
   flex-direction: column;
   align-content: center;
